--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-#chromedriver-autoinstaller==0.6.4 # not required because switched to firefox
 selenium==3.6.0
-#tkinter==8.6 # not required if installed by default
+tk==0.1.0
+pillow==11.1.0
